// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component isDisabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            aria-disabled={true}
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1amfmud 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1llw3v1-k4pcl5 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e b2xdcj-qq5o9s j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff y756bg-g4j413 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1amfmud 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1llw3v1-k4pcl5 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e b2xdcj-qq5o9s j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff y756bg-g4j413 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isInvalid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1llw3v1-17xx5qx 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1llw3v1-17xx5qx 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isReadOnly 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-ksaz4x 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-1tbck4z 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-wnd9tc j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-wnd9tc 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-wnd9tc 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-17ut2f4 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-ksaz4x 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-1tbck4z 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-wnd9tc j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-wnd9tc 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-wnd9tc 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-17ut2f4 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-10d27qj 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-lfqm4y j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-lfqm4y 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-lfqm4y 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-vq6gb4 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-10d27qj 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-lfqm4y j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-lfqm4y 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-lfqm4y 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-vq6gb4 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 1njbp1t-913h4q"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 1njbp1t-913h4q"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 cktard-17xz9t9"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 3wzsaj-913h4q"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="1milmwi-1k7pv9v 1milmwi-1j1xgf6 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k 3wzsaj-913h4q"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ksor04 3wzsaj-913h4q"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-1rh3r0r 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-14om591 j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-14om591 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-14om591 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-12m2qyn 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ksor04 3wzsaj-913h4q"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1llw3v1-1jvh2c 1p9eydi-1rh3r0r 3wzsaj-913h4q"
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-14om591 j3ja40-8x8pi9"
                >
                  <svg
                    data-style="cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-14om591 3wzsaj-913h4q cod3kx-1q64x7k cod3kx-1374l6k 1p9eydi-14om591 3wzsaj-913h4q"
                    role="img"
                    size="md"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                        fill="currentColor"
                        stroke=""
                      />
                    </g>
                  </svg>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="y756bg-sp0qff 1p9eydi-12m2qyn 3wzsaj-qc4xxi 1njbp1t-qc4xxi 1njbp1t-qc4xxi 3wzsaj-913h4q"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
